<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.ActivityFilmDetail"
    android:orientation="vertical">
    <ScrollView
        android:layout_height="match_parent"
        android:layout_width="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <FrameLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true">
                <ImageView
                    android:id="@+id/filmDetailImageBanner"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:scaleType="fitStart" />
                <TextView
                    android:id="@+id/filmDetailTitle"
                    android:layout_gravity="bottom"
                    android:gravity="center"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:textStyle="bold"
                    android:fontFamily="@font/msgothic"
                    android:textAllCaps="true"
                    android:textSize="28sp"
                    android:textColor="@color/black"
                    android:shadowColor="@color/white"
                    android:shadowDx="1"
                    android:shadowDy="1"
                    android:shadowRadius="2"
                    android:paddingBottom="3dp"/>
            </FrameLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingHorizontal="6dp">

                <TextView
                    android:id="@+id/filmDetailOriginalTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="2dp"
                    android:textColor="@color/text_light"
                    android:textSize="18sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/filmDetailSinopsis"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/filmDetailDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/text_light"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/filmDetailDirector"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/filmDetailDirector"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Isao Takahata"
                    android:textAlignment="center"
                    android:textColor="@color/text_light"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/filmDetailDuration"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/filmDetailDuration"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/text_light"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/filmDetailReleaseDate"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/filmDetailYear"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/text_light"
                    android:textSize="16sp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="6dp"
                    android:fontFamily="sans-serif-black"
                    android:text="@string/filmDetailScore"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <TextView
                    android:id="@+id/filmDetailScore"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAlignment="center"
                    android:textColor="@color/text_light"
                    android:textSize="16sp" />

                <ImageView
                    android:id="@+id/filmDetailImage"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_margin="8dp" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>